--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	"dependencies": {
 		"embla-carousel": "^7.0.5",
 		"embla-carousel-autoplay": "^7.0.5",
-		"embla-carousel-svelte": "^7.0.5",
+		"imagetools-core": "^3.2.3",
 		"node-fetch": "^3.3.0"
 	}
 }
