csp moved to vercel only config

--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,10 @@
 				{
 					"key": "Permissions-Policy",
 					"value": "geolocation=(self), microphone=()"
+				},
+				{
+					"key": "Content-Security-Policy",
+					"value": "default-src 'self'; img-src self data: res.cloudinary.com i.ytimg.com"
 				}
 			]
 		}
