--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,7 @@
 				},
 				{
 					"key": "Content-Security-Policy",
-					"value": "default-src 'self'; img-src self data: res.cloudinary.com i.ytimg.com"
+					"value": "default-src 'self'; img-src 'self' data: res.cloudinary.com i.ytimg.com"
 				}
 			]
 		}
