--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
 			"source": "/(.*)",
 			"headers": [
 				{
+					"key": "Access-Control-Allow-Origin",
+					"value": "https://test-case-f.vercel.app"
+				},
+				{
 					"key": "X-Content-Type-Options",
 					"value": "nosniff"
 				},
@@ -25,7 +29,7 @@
 				},
 				{
 					"key": "Content-Security-Policy",
-					"value": "default-src 'self'; img-src 'self' data: res.cloudinary.com i.ytimg.com"
+					"value": "img-src 'self' data: res.cloudinary.com i.ytimg.com"
 				}
 			]
 		}
