--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@playwright/test": "1.30.0",
 		"@poppanator/sveltekit-svg": "^2.0.2",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "2",
 		"@sveltejs/kit": "^1.0.0",
 		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^5.47.1",
