--- a/package.json
+++ b/package.json
@@ -12,32 +12,33 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "1.30.0",
-		"@poppanator/sveltekit-svg": "^2.0.2",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-vercel": "2",
-		"@sveltejs/kit": "^1.0.0",
-		"@types/cookie": "^0.5.1",
-		"@typescript-eslint/eslint-plugin": "^5.47.1",
-		"@typescript-eslint/parser": "^5.47.1",
-		"eslint": "^8.31.0",
-		"eslint-config-prettier": "^8.5.0",
+		"@playwright/test": "1.39.0",
+		"@poppanator/sveltekit-svg": "^4.1.3",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-static": "^2.0.3",
+		"@sveltejs/adapter-vercel": "^3.0.3",
+		"@sveltejs/kit": "^1.27.1",
+		"@types/cookie": "^0.5.3",
+		"@typescript-eslint/eslint-plugin": "^6.9.0",
+		"@typescript-eslint/parser": "^6.9.0",
+		"eslint": "^8.52.0",
+		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.1",
-		"prettier-plugin-svelte": "^2.9.0",
-		"svelte": "^3.55.0",
-		"svelte-check": "^3.0.1",
-		"svelte-preprocess": "^5.0.0",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.4",
-		"vite": "^4.0.1",
-		"vite-imagetools": "^4.0.11"
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
+		"svelte": "^4.2.2",
+		"svelte-check": "^3.5.2",
+		"svelte-preprocess": "^5.0.4",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.5.0",
+		"vite-imagetools": "^6.1.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"embla-carousel": "^7.0.5",
-		"embla-carousel-autoplay": "^7.0.5",
-		"imagetools-core": "^3.2.3",
-		"node-fetch": "^3.3.0"
+		"embla-carousel": "8.0.0-rc14",
+		"embla-carousel-autoplay": "8.0.0-rc14",
+		"imagetools-core": "^5.1.0",
+		"node-fetch": "^3.3.2"
 	}
 }
