--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,13 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
+		"types": [
+			"node"
+		]
 	},
-	"include": ["./src/**/*.ts"]
+	"include": [
+		"./src/**/*.ts"
+	]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
