--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "pnpm pagefind && vite build",
 		"preview": "vite preview",
+		"pagefind": "vite build --mode=pagefind && npx -y pagefind --site .vercel/output/static --output-path static/pagefind --force-language ro --verbose",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
