--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"deploy:vercel": "node build.js && pnpm pagefind && vite build && vercel deploy --prebuilt --prod"
 	},
 	"devDependencies": {
 		"@playwright/test": "1.39.0",
