--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"cheerio": "1.0.0-rc.12",
 		"embla-carousel": "8.0.0-rc14",
 		"embla-carousel-autoplay": "8.0.0-rc14",
+		"express": "^4.18.2",
 		"imagetools-core": "^5.1.0",
 		"node-fetch": "^3.3.2",
 		"sharp": "^0.32.6"
