--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"deploy:vercel": "node build.js && pnpm pagefind && vite build && vercel deploy --prebuilt --prod"
+		"deploy:vercel": "node build.js && pnpm pagefind && vite build && vercel deploy --prebuilt --prod --archive=tgz --local-config ./vercel.json"
 	},
 	"devDependencies": {
 		"@playwright/test": "1.41.2",
@@ -40,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/supabase-js": "^2.44.2",
 		"@vercel/blob": "^0.20.0",
 		"cheerio": "1.0.0-rc.12",
 		"embla-carousel": "8.0.0-rc22",
